--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,7 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif; 
+  font-weight: 300;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -95,7 +94,7 @@ code {
 
 .opener-img {
 	width: 100vw;
-	height: 75vh;
+	height: 100vh;
 }
 
 .opener {
@@ -111,8 +110,9 @@ code {
 }
 
 .d-title-box {
+	visibility: hidden;
 	position: absolute;
-	top: 8vh;
+	top: 10vh;
 	left: 5vw;
 	background-color: #BEEEFD;
 	padding-left: 10vh;
@@ -121,8 +121,9 @@ code {
 }
 
 .d-subtitle-box {
+	visibility: hidden;
 	position: absolute;
-	top: 21vh;
+	top: 23vh;
 	left: 5vw;
 	background-color: #BEEEFD;
 	padding-left: 20vh;
@@ -133,6 +134,16 @@ code {
 	transform: rotate(90deg);
 	height: 120px;
 	width: 120px;
+}
+
+.arrow-icon {
+	display: flex;
+	align-items: center;
+	text-align: center;
+	visibility: hidden;
+	position: absolute;
+	bottom: 10vh;
+	left: 45vw;
 }
 
 .nav-bg {
